# Bipedal-humanoid-robot

./: README.md
Humanoid_Packages/meshes/: Head_Vertical_Joint.STL  Head_Vertical_Link_col.STL  Left_Foot_Link_col.STL  Left_Hip_Joint_col.STL  (+10 more)
Humanoid_trial_v1/: CMakeLists.txt  package.xml
Move_It Package/: .setup_assistant  CMakeLists.txt  package.xml
humanoid_descripition/: CMakeLists.txt  package.xml
humanoid_descripition/config/: joint_names_humanoid.yaml
humanoid_descripition/launch/: display.launch  gazebo.launch
humanoid_descripition/meshes/: Camera.STL  Head_Horizontal_Link.STL  Head_Vertical_Link.STL  IMU.STL  Left_Calf_Link.STL  Left_Hip_Link.STL  Left_Lower_Shoulder Link.STL  Left_Mid_Shoulder_Link.STL  Left_Thigh_Link.STL  Left_Upper_Shoulder_link.STL  Left_foot_Link.STL  Right_Calf_Link.STL  Right_Foot_Link.STL  Right_Hip_Link.STL  Right_Lower_Shoulder_link.STL  Right_Mid_Shoulder_link.STL  Right_Thigh_Link.STL  Right_Upper_Shoulder_Link.STL
humanoid_descripition/urdf/: humanoid.csv  humanoid.urdf  humanoid_main.urdf  humanoid_v2.urdf  humanoid_v3.urdf  humanoid_with_hany_edits.urdf
humanoid_gazebo/: CMakeLists.txt  package.xml
humanoid_image_processing/: CMakeLists.txt  package.xml
humanoid_kinematics/: CMakeLists.txt  humanoid_nesreen.launch  package.xml
humanoid_kinematics/src/: Humanoid_kinematics.cpp  humanoid_kinematics.cpp  kinematics_full.cpp  kinematics_full.h  test.py
humanoid_moveit/: .setup_assistant  CMakeLists.txt  package.xml
humanoid_nav/: CMakeLists.txt  package.xml
humanoid_simulation/: CMakeLists.txt  package.xml
(+114 files in other folders)
