<package format="2">
  <name>humanoid_descripition</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for humanoid_descripition</p>
    <p>This package contains configuration data, 3D models and launch files
for Humanoid_V3 robot</p>
  </description>
  <maintainer email="TODO@email.com" />
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <architecture_independent />
  </export>
</package>
